Questionnaire form style upd

--- a/questionForm.html
+++ b/questionForm.html
@@ -5,7 +5,7 @@
       <span class="form-stepper-circle">
         <span>1</span>
       </span>
-      <div class="label">Have skates?</div>
+      <div class="label">Skates</div>
     </a>
   </li>
   <!-- Step 2 -->
