--- a/chart.html
+++ b/chart.html
@@ -9,6 +9,7 @@ DONE
 <html>
   <head>
     <link rel="stylesheet" href="chart.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
   </head>
   <body>
     <div class="questionnaire">
@@ -215,21 +216,14 @@ DONE
         <div class="leftCol">
           <h2>Skates</h2>
           <div>
-            <div class="skateChoice">FR</div>
-            <div class="skateChoice">FE</div>
-            <div class="skateChoice">Something else</div>
-            <div class="skateChoice">Other</div>
+            <!-- dynamic content -->
           </div>
         </div>
         <div class="rightCol">
           <div class="brands">
             <h2>Brands</h2>
             <div class="brandContainer">
-              <div class="brandChoice">abibas</div>
-              <div class="brandChoice">coolbrand</div>
-              <div class="brandChoice">noname</div>
-              <div class="brandChoice">ahaha</div>
-              <div class="brandChoice">laaarbrand</div>
+              <!-- dynamic content -->
               <div class="selectSkateStyle"></div>
             </div>
           </div>
@@ -260,402 +254,7 @@ DONE
                 </tr>
               </thead>
               <tbody class="conversionTableContent">
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
-                <tr>
-                  <th>Skate size</th>
-                  <td>USWomen</td>
-                  <td>USMen</td>
-                  <td>USJunior</td>
-                  <td>EU</td>
-                  <td>UKWomen</td>
-                  <td>UKMen</td>
-                  <td>UKJunior</td>
-                  <td>CM</td>
-                </tr>
+                <!-- dynamic content -->
               </tbody>
             </table>
           </div>
