--- a/chart.html
+++ b/chart.html
@@ -9,7 +9,6 @@ DONE
 <html>
   <head>
     <link rel="stylesheet" href="chart.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
   </head>
   <body>
     <div class="questionnaire">
@@ -107,10 +106,8 @@ DONE
                     -- select an option --
                   </option>
 
-                  <option value="brandA">BrandA</option>
-                  <option value="brandB">BrandB</option>
-                  <option value="brandC">BrandC</option>
-                  <option value="brandD">BrandD</option>
+                  <!-- dynamic content -->
+
                 </select>
               </div>
               <div class="error hidden">
@@ -155,6 +152,9 @@ DONE
                     CM
                   </button>
                   <button class="measurePoint choiceInput" choice="choiceMp">
+                    MP
+                  </button>
+                  <button class="measurePoint choiceInput" choice="choiceMondo">
                     MONDO
                   </button>
                 </div>
@@ -169,9 +169,15 @@ DONE
                 </div>
 
                 <div class="choicePack choiceMp d-none">
-                  <label for="choiceMp">Mondo</label>
+                  <label for="choiceMp">MP</label>
                   <input type="number" id="choiceMp" class="choiceInput" />
                 </div>
+
+                <div class="choicePack choiceMondo d-none">
+                  <label for="choiceMondo">MONDO</label>
+                  <input type="number" id="choiceMondo" class="choiceInput" />
+                </div>
+
               </div>
               <div class="error hidden">
                 <span class="errSelect">
