keep chart witdh when header fixed

--- a/chart.html
+++ b/chart.html
@@ -257,6 +257,30 @@ DONE
                   <th></th>
                 </tr>
               </thead>
+              <thead id="fakeHeader">
+                <tr>
+                  <th rowspan="4" id="skateSize">Skate size</th>
+                </tr>
+                <tr>
+                  <th colspan="8" id="shoeSize">Shoe size</th>
+                </tr>
+                <tr>
+                  <th colspan="3">US</th>
+                  <th>EU</th>
+                  <th colspan="3">UK</th>
+                  <th>CM</th>
+                </tr>
+                <tr>
+                  <th>Women</th>
+                  <th>Men</th>
+                  <th>Junior</th>
+                  <th></th>
+                  <th>Women</th>
+                  <th>Men</th>
+                  <th>Junior</th>
+                  <th></th>
+                </tr>
+              </thead>
                 <tbody class="conversionTableContent">
                   <!-- dynamic content -->
                 </tbody>
